<?xml version="1.0"?>
<package format="3">
  <name>m5_tactical_planner</name>
  <version>1.0.0</version>
  <description>
    M5 Tactical Planner — L3 Tactical Layer Doer (PATH-D MISRA C++:2023).
    Implements dual-layer MPC (Mid-MPC 60-120s horizon + BC-MPC 10-30s reactive)
    for COLREGs-compliant avoidance trajectory generation.
    Backseat Driver pattern: zero vessel constants in decision-core code
    (all hydrodynamic parameters loaded from CapabilityManifest YAML).
    Reference: Yasukawa & Yoshimura 2015 [R7] — MMG 4-DOF model.
  </description>
  <maintainer email="team-m5@mass-l3-tdl.local">Team-M5</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies — PATH-D whitelist -->
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>l3_msgs</depend>
  <depend>l3_external_msgs</depend>
  <depend>spdlog</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen3</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
