<?xml version="1.0"?>
<package format="3">
  <name>m6_colregs_reasoner</name>
  <version>1.0.0</version>
  <description>M6 COLREGs Reasoner -- Rule 5-19 reasoning engine</description>
  <maintainer email="team-m6@mass-l3-tdl.local">Team-M6</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>l3_msgs</depend>
  <depend>Eigen3</depend>
  <depend>spdlog</depend>
  <depend>yaml-cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
