<?xml version="1.0"?>
<package format="3">
  <name>m7_safety_supervisor</name>
  <version>1.0.0</version>
  <description>
    M7 Safety Supervisor — L3 Tactical Layer Checker (IEC 61508 SIL 2 + SOTIF ISO 21448).
    Implements Doer-Checker pattern (ADR-001): monitors M1–M6 Doers via ROS2 topics only.
    No shared code or internal headers with M1–M6 (independence matrix §3.1).
  </description>
  <maintainer email="team-m7@mass-l3-tdl.local">Team-M7</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies — whitelist only (PATH-S ADR-001) -->
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>l3_msgs</depend>
  <depend>l3_external_msgs</depend>
  <depend>spdlog</depend>
  <depend>yaml-cpp</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
